@@ -201,6 +201,12 @@ ToolSettings::ToolSettings(tools::ToolController *ctrl, QWidget *parent)
 			}
 		});
 	connect(
+		bs, &tools::BrushSettings::eraseModeChanged, this, [this](bool erase) {
+			if(!erase && d->currentTool == tools::Tool::ERASER) {
+				setTool(tools::Tool::FREEHAND);
+			}
+		});
+	connect(
 		ctrl, &tools::ToolController::globalSmoothingChanged, bs,
 		&tools::BrushSettings::setGlobalSmoothing);
 
@@ -358,10 +364,6 @@ void ToolSettings::setToolSlot(int idx)
 	// Currently, brush tool is the only tool with tool slots
 	tools::BrushSettings *bs = qobject_cast<tools::BrushSettings*>(d->currentSettings());
 	if(bs) {
-		// Eraser tool is a specialization of the freehand tool locked to the eraser slot
-		if(d->currentTool == tools::Tool::ERASER)
-			return;
-
 		d->previousTool = d->currentTool;
 		d->previousToolSlot = bs->currentBrushSlot();
 		bs->selectBrushSlot(idx);
